--- a/scss/library.scss
+++ b/scss/library.scss
@@ -2,7 +2,10 @@
 @import "normal/normalize";
 
 // Formatting
-@import "formatting/headings";
+@import "formatting/formatting";
 
 // Reset
 @import "normal/reset";
+
+// Classes
+@import "classes/classes";
