--- a/scss/layout/top/_menu.scss
+++ b/scss/layout/top/_menu.scss
@@ -1,32 +1,51 @@
-.nav-container {
+@import "../../mixins/responsive";
 
-  position: relative;
-  display: flex;
-  width: 90vw;
-  margin-left: auto;
-  margin-right: auto;
-
-  &> picture, > menu {
-    flex: 1;
-  }
-
-  &> picture {
-    &> a {
-      display: block;
-      &> img {
-        margin: 0 auto;
-        width: 100px;
-      }
-    }
-  }
+nav.nav-container {
+  width: 100%;
+  height: 100px;
 
   &> menu {
-    &> ul > li {
-      float: left;
-      display: block;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
+    height: 120px;
+    padding: 20px 0;
 
-      &> a {
-        display: block;
+    @include min(xmd) {width: 80%;}
+    @include max(md) {height: 30vh;}
+
+    &> picture, &> picture a, &> picture a img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
+
+    &> picture, &> ul {
+      max-width: 50%;
+
+      @include max(md) {
+        max-width: 100%;
+      }
+    }
+
+    &> picture {
+      & a {
+        & img {
+          @include max(md) {width: 100%;}
+        }
+      }
+    }
+
+    &> ul {
+      list-style-type: none;
+      & li {
+        float: left;
+        & a {
+          display: block;
+          padding: 10px;
+        }
       }
     }
   }
@@ -35,6 +54,12 @@
   &.full {
     max-width: 100%;
     width: 100%;
+  }
+
+  &.vertical {
+    &>ul li {
+      float: initial;
+    }
   }
 
 }
