--- a/scss/normal/normalize/_globals.scss
+++ b/scss/normal/normalize/_globals.scss
@@ -1,27 +1,20 @@
-/* Apply some stuff to both global and text elements */
 #{$global-elements, $global-text-elements} {
   @include global-all;
   @include global-reset;
   @include elements-reset;
-
-  /* Fallback */
-  display: block;
-  /* flow-root is basically the new "clearfix" */
-  display: flow-root;
 }
 
-/* 3.3) $global-text-elements and <details>
------------------------------------------- */
 #{$global-text-elements},
 details {
   @include global-font;
   @include text-reset;
+  display: block;
 }
 
-/* 3.4) $global-headings and h1, h2, h3, h4, h5, h6
------------------------------------------- */
-#{$global-headings} {
-  margin: 0 0 1.1rem;
+#{$text-level-elements}, #{$global-headings} {
+  @include global-reset;
+  @include global-font;
+  @include text-reset;
 }
 
 h1 {
