--- a/scss/normal/normalize/_var.scss
+++ b/scss/normal/normalize/_var.scss
@@ -9,27 +9,35 @@ $htmlbody:             $html, $body;
 // /_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/
 
 // Elements used for containing / "wrapping"
-$global-elements:      article, aside, dialog, footer, header, menu, main, nav, section,
-details, div, img, video, canvas, svg, embed, source, track, form, ul, li, iframe, figure;
+$global-elements: article, aside, dialog, footer, header, menu, main, nav, section,
+details, div, img, video, canvas, svg, embed, source, track, form, ul, li, iframe, figure, picture;
 
 // Elements used for text formatting
-$global-text-elements: h1, h2, h3, h4, h5, h6, a, p, b, i, u, s, q, strike, pre, code, tt,
-blockquote, small, font, center, em, strong, sub, sup, del, samp, big,
-mark, abbr, bdi, address, summary, dfn, caption, div, ins, legend, cite,
+$global-text-elements: b, i, u, s, q, strike, code, tt, small, font, center, em, strong, sub, sup, del, samp, big,
+mark, abbr, bdi, summary, dfn, caption, ins, legend, cite,
 var, label, rt;
 
 // Form elements
-$global-inputs:        input, select, option, button, textarea, datalist,
+$global-inputs: input, select, option, button, textarea, datalist,
 output, optgroup;
+
+$block-level-elements: address, article, aside, blockquote, canvas, dd, div,
+dl, dt, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6,
+header, hgroup, hr, li, main, nav, ol, output, p, pre, section, table, tfoot,
+ul, video;
+
+$text-level-elements: em, strong, dfn, code, samp, kbd, var, cite, a, basefont,
+img, applet, param, font, br, map, area, tt, i, b, u, strike, big, small, sub,
+sup, input, select, option, textarea, caption, tr, th, td;
 
 // \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\
 // ------------------------------- $ELEMENTs -----------------------------
 // /_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/
 
 // HTML5 specific elements
-$html5-elements:       article, aside, audio, canvas, command, details, embed, figcaption, figure, footer, header, hgroup,
+$html5-elements: article, aside, audio, canvas, command, details, embed, figcaption, figure, footer, header, hgroup,
 keygen, meter, nav, output, progress, rp, rt, ruby, section, source, summary, time,
-track, video, wbr;
+track, video, wbr, menu;
 
 // Headings
 $global-headings:      h1, h2, h3, h4, h5, h6;
