--- a/scss/layout/top/_menu.scss
+++ b/scss/layout/top/_menu.scss
@@ -1,65 +1,65 @@
 @import "../../mixins/responsive";
 
+$height: 140px;
+
 nav.nav-container {
+
   width: 100%;
-  height: 100px;
+  position: relative;
+  overflow: hidden;
 
-  &> menu {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    margin-left: auto;
-    margin-right: auto;
-    height: 120px;
-    padding: 20px 0;
+  & .menu {
 
-    @include min(xmd) {width: 80%;}
-    @include max(md) {height: 30vh;}
+    position: relative;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 120px;
+    grid-column-gap: 1%;
+    justify-content: center;
+    width: 80vw;
+    margin: {
+      left: auto;
+      right: auto;
+    }
 
-    &> picture, &> picture a, &> picture a img {
+    @include max(xmd){width: 100%;}
+    @include max(md){grid-template-columns: 100%; grid-template-rows: 100% 100%;}
+
+    &.logo-top {
+      grid-template-columns: 100%;
+      grid-template-rows: 100% 100%;
+    }
+
+    &.logo-right {
+      &> ul {
+        grid-row: 1;
+        @include max(md){grid-row: 2;}
+      }
+    }
+
+    &> input[type=image], & .logo, &> ul, &> input {
+      margin: {
+        left: auto;
+        right: auto;
+      }
+    }
+
+    &> input[type=image], & .logo, &> input {
       max-width: 100%;
+      height: 100%; /* F*ck you, -webkit- max height bug... */
       max-height: 100%;
-      object-fit: contain;
-    }
-
-    &> picture, &> ul {
-      max-width: 50%;
-
-      @include max(md) {
-        max-width: 100%;
-      }
-    }
-
-    &> picture {
-      & a {
-        & img {
-          @include max(md) {width: 100%;}
-        }
-      }
     }
 
     &> ul {
-      list-style-type: none;
-      & li {
-        float: left;
-        & a {
-          display: block;
-          padding: 10px;
-        }
-      }
+
+    }
+
+    &> ul li, &> li {
+      float: left;
+    }
+
+    &> ul li a, &> li a {
+      display: block;
     }
   }
-
-  // Full width class
-  &.full {
-    max-width: 100%;
-    width: 100%;
-  }
-
-  &.vertical {
-    &>ul li {
-      float: initial;
-    }
-  }
-
 }
