--- a/scss/normal/normalize/_forms.scss
+++ b/scss/normal/normalize/_forms.scss
@@ -1,7 +1,7 @@
 #{$global-inputs} {
   @include global-reset;
   @include global-font;
-  background: #F1F1F1;
+  background-color: #F1F1F1;
 }
 
 
@@ -14,6 +14,10 @@ input[type=password], input[type=submit], input[type=tel],
 input[type=time], input[type=url], input[type=week],
 select, textarea {
   margin-bottom: 1px;
+}
+
+input[type=image] {
+  background-color: initial;
 }
 
 /* HTML5 Input Elements */
