--- a/scss/layout/content/_content.scss
+++ b/scss/layout/content/_content.scss
@@ -1,27 +1,31 @@
 section, .content-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: {
-    left: auto;
-    right: auto;
-  }
-
-  @include max(md) {width: 100%; flex-flow: column wrap;}
-
-  &> article, & .content, &> aside, & .aside {
-    h1, h2, h3, h4, h5, h6 {
-      text-align: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: {
+        left: auto;
+        right: auto;
     }
-  }
 
-  &> article, & .content {
-    background: #CCC;
-    flex-basis: 80%;
-  }
+    @include max(md) {width: 100%; flex-flow: column wrap;}
 
-  &> aside, & .aside {
-    background: #333;
-    flex-basis: 20%;
-  }
+    &> article, & .content, &> aside, & .aside {
+        
+        z-index: 0;
+        
+        h1, h2, h3, h4, h5, h6 {
+            text-align: center;
+        }
+    }
+
+    &> article, & .content {
+        background: #CCC;
+        flex: 4;
+    }
+
+    &> aside, & .aside {
+        background: #333;
+        flex: 1;
+        @include minmax(xmd) {min-width: 384px;}
+    }
 }
