--- a/scss/normal/normalize/_attr.scss
+++ b/scss/normal/normalize/_attr.scss
@@ -2,3 +2,8 @@
   /* !important In case it gets overriden somewhere */
   display: none !important;
 }
+
+[visibility="hidden"] {
+    /* !important In case it gets overriden somewhere */
+    display: none !important;
+}
