--- a/scss/normal/normalize/_mixins.scss
+++ b/scss/normal/normalize/_mixins.scss
@@ -2,13 +2,11 @@
     font: {
     family: "Verdana", sans-serif;
     kerning: auto;
-    size: 1em;
-    size: 1rem;
+    size: 16px;
     size-adjust: 0.54;
     weight: 400;
   }
   text: {
-    overflow: clip;
     align: left;
   }
     unicode-bidi: embed;
