--- a/scss/attributes/data/_data.scss
+++ b/scss/attributes/data/_data.scss
@@ -6,33 +6,29 @@
     content: attr(data-tooltip);
     position: absolute;
     display: none;
+    
+    max-width: 300px;
+    width: auto;
+    max-height: 300px;
+    height: auto;
+    
     margin: {
     left: auto;
     right: auto;
     }
+    
     padding: 10px 20px;
     color: #000;
     background-color: #fff;
-    box-shadow: 0 0 8px -4px #000;
+    box-shadow: 0 0 8px -5px #000;
 }
 
 [data-tooltip]:hover::after {
-    display: block;
+    display: grid;
     z-index: 9;
 }
 
-[data-tooltip][data-tooltip-offset="top"]::after {
-    top: -5vh;
-}
-
-[data-tooltip][data-tooltip-offset="bottom"]::after {
-    bottom: -13vh;
-}
-
-[data-tooltip][data-tooltip-offset="left"]::after {
-    left: 0;
-}
-
-[data-tooltip][data-tooltip-offset="right"]::after {
-    right: 0;
+[data-tooltip][data-tooltip-offset="text"]::after {
+    left: -125px;
+    top: -10px;
 }
