--- a/scss/normal/normalize/_htmlbody.scss
+++ b/scss/normal/normalize/_htmlbody.scss
@@ -15,8 +15,8 @@ html > body {
 
 #{$body} {
   margin: 0;
-  /* Removes/fixes "Whitespace nodes", (but not for inputs) } Both are needed */
-  /* Removes/fixes "Whitespace nodes", (but not for inputs) } for this fix */
+  /* Removes "Whitespace nodes", (but not for inputs) } Both are needed */
+  /* Removes "Whitespace nodes", (but not for inputs) } for this fix */
   white-space: nowrap;
   white-space: initial;
 }
