--- a/scss/mixins/_general.scss
+++ b/scss/mixins/_general.scss
@@ -37,3 +37,9 @@
     }
     perspective: $perspective;
 }
+
+@mixin flexbox {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
