--- a/scss/formatting/paragraphs/_paragraphs.scss
+++ b/scss/formatting/paragraphs/_paragraphs.scss
@@ -1,3 +1,7 @@
+p {
+	font-size: 0.98rem;
+}
+
 .italic, .ita {
     font-style: italic;
 }
@@ -30,7 +34,7 @@
     vertical-align: sub;
 }
 
-.footnote {
+p.footnote {
     color: #DDD;
     
     &.italic, &.ita {
