--- a/scss/layout/top/_menu.scss
+++ b/scss/layout/top/_menu.scss
@@ -31,6 +31,11 @@ nav.nav-container {
         &.logo-top {
             grid-template-columns: 100%;
             grid-template-rows: 100% 100%;
+			&> input[type=image], & .logo, .logo > img {
+				max-width: 100%;
+				max-height: 100%;
+				height: 100%;
+			}
         }
 
         &.logo-right {
@@ -40,11 +45,11 @@ nav.nav-container {
             }
         }
 
-        &> input[type=image], & .logo, &> ul, &> input {
+        &> input[type=image], & .logo, .logo > img, &> ul, &> input {
             @include marginAuto;
         }
 
-        &> input[type=image], & .logo, &> input {
+        &> input[type=image], & .logo, .logo > img, &> input {
             height: 100%; /* F*ck you, -webkit- max height bug... */
             max-height: 100%;
         }
@@ -59,6 +64,7 @@ nav.nav-container {
 
         &> ul li a, &> li a {
             display: block;
+			@include paddingSides($x-small);
         }
 
         /* Give option of spanning the <menu> 100%, but still keep the responsiveness */
