--- a/scss/layout/wrapper/_wrapper.scss
+++ b/scss/layout/wrapper/_wrapper.scss
@@ -1,7 +1,23 @@
+@import "../../mixins/mixins";
+
 main, .wrapper {
     width: 100vw;
     max-width: 100% !important;
     min-height: 100vh;
     max-height: auto;
     overflow-x: hidden;
+	
+	&.fixed-container {
+		width: 80vw;
+		max-width: 80vw;
+		@include marginAuto;
+	}
+}
+
+.fixed-container {
+	@include marginAuto;
+	@include minmax(xlg) {max-width: 1280px;}
+	@include minmax(lg) {max-width: 1280px;}
+	@include minmax(xmd) {max-width: 1000px;}
+	@include minmax(md) {max-width: 800px;}
 }
