--- a/scss/templates/_mixins.scss
+++ b/scss/templates/_mixins.scss
@@ -22,9 +22,9 @@
 	}
 }
 
-@mixin gtc { grid-auto-flow: column; grid-auto-columns: 50%; }
-@mixin gtc-tablet { grid-auto-flow: column; grid-auto-columns: 100%; }
-@mixin gtr { grid-auto-flow: row; grid-auto-columns: 100%; grid-template-rows: 100% 100%; }
+@mixin gtc { grid-auto-flow: column; justify-content: space-around; }
+@mixin gtc-tablet { grid-auto-flow: column; justify-content: space-around; }
+@mixin gtr { grid-auto-flow: row; }
 
 @mixin template-grid {
 	display: grid;
