--- a/scss/templates/template1/_template1.scss
+++ b/scss/templates/template1/_template1.scss
@@ -5,6 +5,15 @@ html, body, main, .wrapper {
 	overflow-x: hidden;
 }
 
+body {
+	min-height: 100%;
+}
+
+body > main, body > .wrapper {
+	display: flex;
+	flex-flow: column nowrap;
+}
+
 @import "formatting";
 @import "classes";
 @import "header";
