Helper classes started
Helper classes started such as cf (clearfix), block-center and position fixed, absolute, relative classes with alignment options (top, right, bottom, left).

--- a/scss/classes/classes.scss
+++ b/scss/classes/classes.scss
@@ -1,3 +1,6 @@
+/* Classes */
+
 @import "../mixins/mixins";
+@import "helper-classes/helper-classes";
 @import "positioning/positioning";
 @import "layout/layout";
