--- a/templates/temp1.html
+++ b/templates/temp1.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
 		<title>Lib</title>
-		<link rel="stylesheet" href="../dist/css/templates.css" />
+		<link rel="stylesheet" href="../css/templates.css" />
 		<style media="screen">
 		</style>
 	</head>
