--- a/css/flex.css
+++ b/css/flex.css
@@ -1,1 +1,89 @@
-.grow-1{-webkit-box-flex:1;-ms-flex:1;flex:1}.shrink-1{-webkit-box-flex:0;-ms-flex:0 1;flex:0 1;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:1;flex-shrink:1}.grow-2{-webkit-box-flex:2;-ms-flex:2;flex:2}.shrink-2{-webkit-box-flex:0;-ms-flex:0 2;flex:0 2;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:2;flex-shrink:2}.grow-3{-webkit-box-flex:3;-ms-flex:3;flex:3}.shrink-3{-webkit-box-flex:0;-ms-flex:0 3;flex:0 3;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:3;flex-shrink:3}.grow-4{-webkit-box-flex:4;-ms-flex:4;flex:4}.shrink-4{-webkit-box-flex:0;-ms-flex:0 4;flex:0 4;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:4;flex-shrink:4}.grow-5{-webkit-box-flex:5;-ms-flex:5;flex:5}.shrink-5{-webkit-box-flex:0;-ms-flex:0 5;flex:0 5;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:5;flex-shrink:5}.grow-6{-webkit-box-flex:6;-ms-flex:6;flex:6}.shrink-6{-webkit-box-flex:0;-ms-flex:0 6;flex:0 6;-webkit-box-flex:initial;-ms-flex-positive:initial;flex-grow:initial;-ms-flex-negative:6;flex-shrink:6}
+.grow-1 {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
+
+.shrink-1 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1;
+  flex: 0 1;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 1;
+  flex-shrink: 1; }
+
+.grow-2 {
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
+  flex: 2; }
+
+.shrink-2 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 2;
+  flex: 0 2;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 2;
+  flex-shrink: 2; }
+
+.grow-3 {
+  -webkit-box-flex: 3;
+  -ms-flex: 3;
+  flex: 3; }
+
+.shrink-3 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 3;
+  flex: 0 3;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 3;
+  flex-shrink: 3; }
+
+.grow-4 {
+  -webkit-box-flex: 4;
+  -ms-flex: 4;
+  flex: 4; }
+
+.shrink-4 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 4;
+  flex: 0 4;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 4;
+  flex-shrink: 4; }
+
+.grow-5 {
+  -webkit-box-flex: 5;
+  -ms-flex: 5;
+  flex: 5; }
+
+.shrink-5 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 5;
+  flex: 0 5;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 5;
+  flex-shrink: 5; }
+
+.grow-6 {
+  -webkit-box-flex: 6;
+  -ms-flex: 6;
+  flex: 6; }
+
+.shrink-6 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 6;
+  flex: 0 6;
+  -webkit-box-flex: initial;
+  -ms-flex-positive: initial;
+  flex-grow: initial;
+  -ms-flex-negative: 6;
+  flex-shrink: 6; }
