--- a/css/mixins.css
+++ b/css/mixins.css
@@ -1,1 +1,10 @@
-@media only screen and (max-width:480px){h1,h2,h3,h4,h5,h6{text-transform:uppercase}}@media only screen and (max-width:384px){h1,h2,h3,h4,h5,h6{text-transform:uppercase}}
+/* MARGIN MIXINS */
+/* PADDING MIXINS */
+/* CLEARFIX MIXIN */
+@media only screen and (max-width: 480px) {
+  h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase; } }
+
+@media only screen and (max-width: 384px) {
+  h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase; } }
