--- a/css/reset.css
+++ b/css/reset.css
@@ -1,1 +1,11 @@
-aside.unset>*,body.unset>*,fieldset.unset>*,footer.unset>*,form.unset>*,header.unset>*,section.unset>*,table.unset>*{all:initial;all:unset}details.unset,div.unset{all:initial;all:unset}.unset,.unset-children>*{all:initial;all:unset}
+body.unset > *, form.unset > *, table.unset > *, fieldset.unset > *, header.unset > *, section.unset > *, aside.unset > *, footer.unset > * {
+  all: initial;
+  all: unset; }
+
+div.unset, details.unset {
+  all: initial;
+  all: unset; }
+
+.unset, .unset-children > * {
+  all: initial;
+  all: unset; }
